wip to find proper way to make things...

--- a/app/views/home/home.scala.html
+++ b/app/views/home/home.scala.html
@@ -40,11 +40,11 @@
       <li><a href="#">CREATE</a></li>
       <li><a href="#">DISCOVER</a></li>
       <li><hr/></li>
-      <li><a href="#">ALL</a></li>
-      <li><a href="#">GEONAUTE</a></li>
-      <li><a href="#">SCAN'UP</a></li>
-      <li><a href="#">IDOO</a></li>
-      <li><a href="#">SEMATIC</a></li>
+      <li><a href="#past/all">ALL</a></li>
+      <li><a href="#past/onconnect">GEONAUTE</a></li>
+      <li><a href="#past/scanup">SCAN'UP</a></li>
+      <li><a href="#past/idoo">IDOO</a></li>
+      <li><a href="#past/sematic">SEMATIC</a></li>
     </ul>
   </div>
 </section>
@@ -75,11 +75,11 @@
 
 <!-- Init Home page -->
 <script type="text/javascript">
-$(document).ready(function() {
+/** $(document).ready(function() {
     var lastFeeds = @Html(lastFeeds.toString);
     lastFeeds.forEach(function(feed) {
         PlayStory.Home.FeedsPast.pastServer.fromTemplate(feed);
     });
-});
+}); */
 </script>
 }
