--- a/app/views/home/index.scala.html
+++ b/app/views/home/index.scala.html
@@ -1,4 +1,4 @@
-@(lastFeeds: play.api.libs.json.JsValue)
+@()
 
 @main("Play Story > Home") {
 
@@ -64,19 +64,17 @@
 <!-- Feeds -->
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/inbox/inboxView.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/inbox/inboxDOM.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsPresentServer.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsPastServer.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsServer.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsPresentDOM.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsPastDOM.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsModel.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsPastView.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsPresentView.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsView.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/home.js")"></script>
 
 <!-- Init Home page -->
 <script type="text/javascript">
 /** $(document).ready(function() {
-    var lastFeeds = @Html(lastFeeds.toString);
+    var lastFeeds = Html(lastFeeds.toString);
     lastFeeds.forEach(function(feed) {
         PlayStory.Home.FeedsPast.pastServer.fromTemplate(feed);
     });
