--- a/app/views/home/comment.scala.html
+++ b/app/views/home/comment.scala.html
@@ -1,5 +1,15 @@
 @()
 
+<script id="new_comment_tmpl" type="text/html">
+  <div class="comment">
+    <div class="avatar">
+      <img src="/assets/images/commons/avatar.png" width="30px" height="30px" alt="play story"/>
+    </div>
+    <textarea placeholder="Write a comment..."></textarea>
+    <button class="save">Comment</button>
+  </div>
+</script>
+
 <script id="comment_tmpl" type="text/html">
   <div class="comment">
     <div class="avatar">
