Get real basic data. Turn on main stream. Turn on comment.

--- a/app/assets/stylesheets/story/home.less
+++ b/app/assets/stylesheets/story/home.less
@@ -154,10 +154,6 @@
                     }
                 }
 
-                .comments {
-                    display: none;
-                }
-
                 .footer {
                     margin-top: 12px;
 
@@ -177,6 +173,12 @@
     background: white;
 
     .apps {
-        .box
+        .box;
+
+        li {
+            a {
+                text-transform: uppercase;
+            }
+        }
     }
 }
