--- a/app/assets/stylesheets/story/layout.less
+++ b/app/assets/stylesheets/story/layout.less
@@ -57,6 +57,7 @@ header {
         }
 
         .signout a {
+            text-transform: uppercase;
             float: right;
             padding: 15px;
             border-left: 1px dotted @redPlay;
