Dispatch user data from template to JS

--- a/app/views/home/feeds.scala.html
+++ b/app/views/home/feeds.scala.html
@@ -18,7 +18,7 @@
         <% feed.comments.forEach(function(comment) { %>
         <li class="comment">
           <div class="avatar">
-            <img src="/assets/images/commons/avatar.png" width="30px" height="30px" alt="play story"/>
+            <img src="/assets/images/commons/avatar.png" width="30px" height="30px" />
           </div>
           <p><%= comment.message %></p>
         </li>
