--- a/app/views/home/index.scala.html
+++ b/app/views/home/index.scala.html
@@ -9,19 +9,23 @@
   <div class="inbox">
     <h3>INBOX</h3>
     <ul>
-      <li><a href="#past/all">ALL (1102)</a></li>
-      <li><a href="#past/error">ERROR (0)</a></li>
-      <li><a href="#past/warn">WARN (2)</a></li>
-      <li><a href="#past/info">INFO (1000)</a></li>
+      <li><a href="#past/all">ALL</a></li>
       <li><a href="#starred">STARRED (99)</a></li>
+      <li><hr/></li>
+      <li><a href="#past/debug">DEBUG <span></span></a></li>
+      <li><a href="#past/error">ERROR <span></span></a></li>
+      <li><a href="#past/fatal">FATAL <span></span></a></li>
+      <li><a href="#past/info">INFO   <span></span></a></li>
+      <li><a href="#past/trace">TRACE <span></span></a></li>
+      <li><a href="#past/warn">WARN   <span></span></a></li>
     </ul>
   </div>
 </section>
 
 <section class="column-middle">
   <ul class="tabs">
-    <li class="past on"><a href="#past">PAST</a></li>
-    <li class="present"><a href="#present">PRESENT</a></li>
+    <li class="past on"><a href="#past/all">PAST</a></li>
+    <li class="present"><a href="#present/all">PRESENT</a></li>
   </ul>
   <div class="feeds present">
     <div class="waiting-feeds">Waiting feeds ...</div>
