--- a/app/views/home/index.scala.html
+++ b/app/views/home/index.scala.html
@@ -12,12 +12,12 @@
       <li><a href="#past/all">ALL</a></li>
       <li><a href="#starred">STARRED (99)</a></li>
       <li><hr/></li>
-      <li><a href="#past/debug">DEBUG <span></span></a></li>
-      <li><a href="#past/error">ERROR <span></span></a></li>
-      <li><a href="#past/fatal">FATAL <span></span></a></li>
-      <li><a href="#past/info">INFO   <span></span></a></li>
-      <li><a href="#past/trace">TRACE <span></span></a></li>
-      <li><a href="#past/warn">WARN   <span></span></a></li>
+      <li class="DEBUG"><a href="#past/debug">DEBUG <span></span></a></li>
+      <li class="ERROR"><a href="#past/error">ERROR <span></span></a></li>
+      <li class="FATAL"><a href="#past/fatal">FATAL <span></span></a></li>
+      <li class="INFO"><a href="#past/info">INFO   <span></span></a></li>
+      <li class="TRACE"><a href="#past/trace">TRACE <span></span></a></li>
+      <li class="WARN"><a href="#past/warn">WARN   <span></span></a></li>
     </ul>
   </div>
 </section>
