--- a/app/views/home/index.scala.html
+++ b/app/views/home/index.scala.html
@@ -63,6 +63,7 @@
 @feeds()
 @comment()
 <!-- Home javascript imports -->
+<script type="text/javascript" src="@routes.Assets.at("javascripts/utils.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/Router.js")"></script>
 <!-- Tabs -->
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/tabs/TabsView.js")"></script>
