--- a/app/views/home/index.scala.html
+++ b/app/views/home/index.scala.html
@@ -75,6 +75,7 @@
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsPresentDOM.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsPastDOM.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsModel.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/home/Bucket.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsView.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/home.js")"></script>
 
