--- a/app/views/home/index.scala.html
+++ b/app/views/home/index.scala.html
@@ -9,8 +9,7 @@
   <div class="inbox">
     <h3>INBOX</h3>
     <ul>
-      <li><a href="#past/all">ALL</a></li>
-      <li><a href="#starred">STARRED (99)</a></li>
+      <li><a href="#starred">STARRED (@user.starredLogs.size)</a></li>
       <li><hr/></li>
       <li class="DEBUG"><a href="#past/debug">DEBUG <span></span></a></li>
       <li class="ERROR"><a href="#past/error">ERROR <span></span></a></li>
@@ -47,9 +46,9 @@
       <li><a href="#">CREATE</a></li>
       <li><a href="#">DISCOVER</a></li>
       <li><hr/></li>
-      <li><a href="#past/all">ALL</a></li>
+      <li class="project"><a href="#past/all">ALL</a></li>
       @user.projects.map { project =>
-      <li><a href="#past/@project.name">@project.realName</a></li>
+      <li class="project"><a href="#past/@project.name">@project.realName</a></li>
       }
     </ul>
   </div>
@@ -71,6 +70,8 @@
 <!-- Feeds -->
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/inbox/inboxView.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/inbox/inboxDOM.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/home/apps/appsView.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/home/apps/appsDOM.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsServer.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsPresentDOM.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsPastDOM.js")"></script>
