--- a/app/views/home/index.scala.html
+++ b/app/views/home/index.scala.html
@@ -9,7 +9,7 @@
   <div class="inbox">
     <h3>INBOX</h3>
     <ul>
-      <li><a href="#starred">STARRED (@user.starredLogs.size)</a></li>
+      <li><a href="#bookmarks">STARRED (@user.bookmarks.size)</a></li>
       <li><hr/></li>
       <li class="DEBUG"><a href="#past/debug">DEBUG <span></span></a></li>
       <li class="ERROR"><a href="#past/error">ERROR <span></span></a></li>
