fetch bookmarked logs

--- a/app/views/home/index.scala.html
+++ b/app/views/home/index.scala.html
@@ -8,15 +8,18 @@
 <section class="column-left">
   <div class="inbox">
     <h3>INBOX</h3>
-    <ul>
-      <li><a href="#bookmarks">STARRED (@user.bookmarks.size)</a></li>
+    <ul class="mainstream">
+      <li><a href="#bookmarks">STARRED (@user.bookmarkIds.size)</a></li>
+    </ul>
+    <ul class="levels">
       <li><hr/></li>
-      <li class="DEBUG"><a href="#past/debug">DEBUG <span></span></a></li>
-      <li class="ERROR"><a href="#past/error">ERROR <span></span></a></li>
-      <li class="FATAL"><a href="#past/fatal">FATAL <span></span></a></li>
-      <li class="INFO"><a href="#past/info">INFO   <span></span></a></li>
-      <li class="TRACE"><a href="#past/trace">TRACE <span></span></a></li>
-      <li class="WARN"><a href="#past/warn">WARN   <span></span></a></li>
+      <li class="all"><a href="#all">ALL</a></li>
+      <li class="debug"><a href="#past/debug">DEBUG<span></span></a></li>
+      <li class="error"><a href="#past/error">ERROR<span></span></a></li>
+      <li class="fatal"><a href="#past/fatal">FATAL<span></span></a></li>
+      <li class="info"><a href="#past/info">INFO<span></span></a></li>
+      <li class="trace"><a href="#past/trace">TRACE<span></span></a></li>
+      <li class="warn"><a href="#past/warn">WARN<span></span></a></li>
     </ul>
   </div>
 </section>
