--- a/app/views/home/index.scala.html
+++ b/app/views/home/index.scala.html
@@ -9,7 +9,7 @@
   <div class="inbox">
     <h3>INBOX</h3>
     <ul class="mainstream">
-      <li><a href="#bookmarks">STARRED (@user.bookmarkIds.size)</a></li>
+      <li><a href="#bookmarks">STARRED <span> (@user.bookmarkIds.size)</span></a></li>
     </ul>
     <ul class="levels">
       <li><hr/></li>
