--- a/app/assets/stylesheets/story/home.less
+++ b/app/assets/stylesheets/story/home.less
@@ -115,6 +115,14 @@
             overflow: hidden;
             -webkit-transition: opacity 2s ease 1s;
 
+            &:hover {
+                border: 1px solid #8F8181;
+            }
+
+            &.clicked {
+                border: 1px solid #5F5D5D;
+            }
+
             div.avatar {
                 float: left;
                 img {
