fix a js bug; remove Google.Api;

--- a/app/views/home/index.scala.html
+++ b/app/views/home/index.scala.html
@@ -68,7 +68,7 @@
 <script type="text/javascript" src="@routes.Assets.at("javascripts/utils.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/namespace.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/Router.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/Models.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/ModelsDef.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/Bucket.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/Server.js")"></script>
 
