--- a/app/views/home/index.scala.html
+++ b/app/views/home/index.scala.html
@@ -72,12 +72,14 @@
 <script type="text/javascript" src="@routes.Assets.at("javascripts/Bucket.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/Server.js")"></script>
 
+<script type="text/javascript" src="@routes.Assets.at("javascripts/home/search/searchDOM.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/tabs/TabsDOM.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/inbox/inboxDOM.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/apps/appsDOM.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsPresentDOM.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsPastDOM.js")"></script>
 
+<script type="text/javascript" src="@routes.Assets.at("javascripts/home/search/searchView.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/tabs/TabsView.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/inbox/inboxView.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/apps/appsView.js")"></script>
