--- a/app/views/home/dashboard/feeds.scala.html
+++ b/app/views/home/dashboard/feeds.scala.html
@@ -62,3 +62,37 @@
       </div>
   </li>
 </script>
+
+
+<!-- Comments -->
+
+<script id="new_comment_tmpl" type="text/html">
+  <li class="new comment">
+    <div class="avatar">
+      <img src="<%= author.avatar %>" width="40px" height="40px" alt="play story"/>
+    </div>
+    <div class="body">
+      <div class="header">
+        <a href="#" class="author"><%= author.firstname %> <%= author.lastname %></a>
+      </div>
+      <div class="message">
+        <textarea placeholder="Write a comment..."></textarea>
+        <button class="save">Comment</button>
+      </div>
+    </div>
+  </li>
+</script>
+
+<script id="comment_tmpl" type="text/html">
+  <li class="comment">
+    <div class="avatar">
+      <img src="<%= author.avatar %>" width="40px" height="40px" alt="play story"/>
+    </div>
+    <div class="body">
+      <div class="header">
+        <a href="#" class="author"><%= author.firstname %> <%= author.lastname %></a>
+      </div>
+      <div class="message"><%= message %></div>
+    </div>
+  </li>
+</script>
