Search is now be part of Dashboard

--- a/app/assets/stylesheets/story/dashboard.less
+++ b/app/assets/stylesheets/story/dashboard.less
@@ -1,7 +1,5 @@
 @import "../variables.less";
 
-
-
 .box {
     border: 1px dotted @redPlay;
     background: url('/assets/images/commons/stripes.png');
@@ -26,6 +24,19 @@
                 color: @blueEmacs;
             }
         }
+    }
+}
+
+.search {
+    background: @greenPlay;
+    border: 1px solid white;
+    color: white;
+    text-align: center;
+    padding: 10px;
+
+    input[name=search] {
+        width: 300px;
+        height: 30px;
     }
 }
 
