--- a/app/views/home/dashboard/feeds.scala.html
+++ b/app/views/home/dashboard/feeds.scala.html
@@ -5,8 +5,7 @@
     <div class="more-feeds">
       <a href="#"><span class="counter"></span> more logs...</a>
     </div>
-    <ul>
-   </ul>
+    <ul class="feeds"></ul>
   </div>
 </script>
 
