--- a/app/views/home/index.scala.html
+++ b/app/views/home/index.scala.html
@@ -8,10 +8,11 @@
 
 }{
 <!-- Home CSS imports -->
-<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/story/home.css")">
+<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/story/dashboard.css")">
 }{
 <!-- Home javascript templates -->
 @dashboard.layout()
+@dashboard.search()
 @dashboard.feeds()
 @dashboard.tabs()
 @dashboard.apps()
