--- a/app/views/home/dashboard/feeds.scala.html
+++ b/app/views/home/dashboard/feeds.scala.html
@@ -24,7 +24,7 @@
     </div>
     <div class="log">
       <div class="header">
-        <a class="project" href="#past/<%= feed.project.name %>"><%= feed.realName %></a>
+        <a class="project" href="#dashboard/past/<%= feed.project.name %>"><%= feed.realName %></a>
         <span class="time"><%=feed.time %></span>
       </div>
       <div class="content">
