--- a/app/views/home/index.scala.html
+++ b/app/views/home/index.scala.html
@@ -31,14 +31,14 @@
   routes.javascript.Dashboard.inbox
 )
 
-<!-- Home javascript imports -->
 <script type="text/javascript" src="@routes.Assets.at("javascripts/utils.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/namespace.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/Router.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/ModelsDef.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/Bucket.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/Server.js")"></script>
 
+<!-- Dashboard -->
+<script type="text/javascript" src="@routes.Assets.at("javascripts/home/dashboard/Server.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/dashboard/search/searchDOM.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/dashboard/tabs/TabsDOM.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/dashboard/inbox/inboxDOM.js")"></script>
@@ -52,13 +52,14 @@
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/dashboard/feeds/feedsView.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/dashboard/layoutDOM.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/dashboard/dashboard.js")"></script>
+
+<!-- Home -->
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/home.js")"></script>
 
 <!-- Init Home page -->
 <script type="text/javascript">
 $(document).ready(function() {
-    var user = @Html(toJson(user).toString);
-    PlayStory.Server.fromTemplate('user', user);
+    PlayStory.Home.Dashboard.Server.fromTemplate('user', @Html(toJson(user).toString));
 });
 </script>
 }
