--- a/app/views/home/main.scala.html
+++ b/app/views/home/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String, user: models.User)(content: Html)(css: Html)(scripts: Html)
+@(title: String)(content: Html)(css: Html)(scripts: Html)
 
 <!DOCTYPE html>
 
@@ -20,7 +20,7 @@
         <div class="profil">
           <h1>Play Story</h1>
           <div class="signout">
-            <a href="#">@user.fullName</a>
+            <a href="#">TODO</a>
           </div>
         </div>
         <div class="gap">
