reworking js code

--- a/app/views/home/dashboard/inbox.scala.html
+++ b/app/views/home/dashboard/inbox.scala.html
@@ -4,7 +4,7 @@
   <div class="inbox">
     <h3>INBOX</h3>
     <ul class="mainstream">
-      <li><a href="#bookmarks">STARRED <span></span></a></li>
+      <li><a href="#dashboard/bookmarks">STARRED <span></span></a></li>
     </ul>
     <ul class="levels">
       <li><hr/></li>
